working get diagnosis by id endpoint
