# backend/api.py
@@ -1,4 +1,15 @@
+import flask
 from tinydb import TinyDB, Query
+import requests 
+
+import openai 
+import os
+
+
+
+openai.api_key = os.environ["OPENAI_API_KEY"]
+
+client = openai.OpenAI(api_key=os.environ["OPENAI_API_KEY"])
 
 db = TinyDB('backend/db.json') # connect to the db file
 
@@ -10,15 +21,24 @@ def get_patients():
 # uses 2 endpoints:
 # GET /patients/{ID} -> grab patient medical record by ID
 # POST /diagnose -> diagnose the paitent's medical record with GPT 
-
-def get_diagnosis_by_id(ID):
+def get_diagnosis_by_id(body):
+    ID = body.get('ID')
+    prompt = body.get('prompt')
     patient = get_patient_by_ID(ID) # JSON of patient's medical record
     # call GPT to diagnose patient's medical record
     # return the diagnosis/more questions
-    #diagnosis = 
     
-    print(patient)
-    return patient, 200
+    
+    prompt = "Given this patient's record as this: "   + str(patient) + '. Now the patient has this question: ' + prompt + '. What is the diagnosis in 20 words or less?' 
+
+    diagnosis = chat_with_gpt(prompt)
+    
+    return diagnosis, 200
+
+def chat_with_gpt(prompt):
+    response = client.completions.create(model="gpt-3.5-turbo-instruct", prompt=prompt, max_tokens=50)
+    chat_response = response.choices[0].text.strip()
+    return flask.jsonify({'response': chat_response})
 
 def get_patient_by_ID(ID):
     print(ID)
