# backend/swagger.yml
@@ -1,9 +1,3 @@
-# swagger.yml
-# blueprint for the API - for frontend to use
-# define the data your web server can expect 
-# how server should respond to requests
-
-# The full request URL is constructed as <server-url>/path.
 openapi: 3.0.0
 info:
   title: Medical Record API
@@ -15,6 +9,16 @@ servers:
 
 components:
   schemas:
+    diagnosis:
+      type: object
+      properties:
+        ID:
+          type: integer
+        prompt:
+          type: string
+      required:
+        - ID
+        - prompt
     question:
       type: object
       properties:
@@ -69,7 +73,7 @@ components:
         - relationship
         - phone
         - email
-    Patient:
+    DetailedPatientRecord:
       type: object
       properties:
         ID:
@@ -78,19 +82,34 @@ components:
           type: string
         age:
           type: integer
-        #pre-quesitonnare
         recent_changes_in_health_yn:
           type: boolean
         pre-existing_conditions:
-          #array of strings that are conditions
           type: array
           items:
             type: string
         medications:
-          type: boolean
+          type: array
+          items:
+            $ref: '#/components/schemas/Medication'
         any_allergies_yn:
-          type: boolean  
-        #ask for these fields in telehealth or appointment form
+          type: boolean
+        allergies:
+          type: array
+          items:
+            $ref: '#/components/schemas/Allergy'
+        symptoms:
+          type: array
+          items:
+            $ref: '#/components/schemas/Symptom'
+        lifestyle_factors:
+          $ref: '#/components/schemas/LifestyleFactors'
+        recent_travel_history:
+          type: string
+        recent_exposure_to_sick_individuals:
+          type: string
+        family_history_of_illnesses:
+          type: string
         address:
           $ref: '#/components/schemas/Address'
         contact:
@@ -109,20 +128,64 @@ components:
         - pre-existing_conditions
         - medications
         - any_allergies_yn
+        - allergies
+        - symptoms
+        - lifestyle_factors
+        - recent_travel_history
+        - recent_exposure_to_sick_individuals
+        - family_history_of_illnesses
+    Medication:
+      type: object
+      properties:
+        name:
+          type: string
+        dosage:
+          type: string
+        reason_for_taking:
+          type: string
+    Allergy:
+      type: object
+      properties:
+        substance:
+          type: string
+        reaction:
+          type: string
+    Symptom:
+      type: object
+      properties:
+        symptom:
+          type: string
+        duration:
+          type: string
+        severity:
+          type: string
+        how_it_affects_daily_life:
+          type: string
+    LifestyleFactors:
+      type: object
+      properties:
+        diet:
+          type: string
+        exercise:
+          type: string
+        stress_level:
+          type: string
+        sleep_quality:
+          type: string
 paths:
-  /patient: #relative path
-    get: #
-      summary: Returns a list of all paitents
+  /patient:
+    get:
+      summary: Returns a list of all patients
       operationId: api.get_patients
       responses:
-        '200':    # HTTP status code
+        '200':
           description: A JSON array of patients
           content:
-            application/json:    # Media type
+            application/json:
               schema: 
                 type: array
                 items: 
-                  $ref: '#/components/schemas/Patient'
+                  $ref: '#/components/schemas/DetailedPatientRecord'
     post:
       summary: Creates a new patient
       operationId: api.create_patient_initial
@@ -131,18 +194,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Patient'
+              $ref: '#/components/schemas/DetailedPatientRecord'
       responses:
         '201':
           description: Patient created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Patient'
+                $ref: '#/components/schemas/DetailedPatientRecord'
         '400':
           description: Invalid input
-  #patient by ID
-  /patient/{ID}: 
+  /patient/{ID}:
     get:
       summary: Returns a patient by ID
       operationId: api.get_patient_by_ID
@@ -158,7 +220,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Patient'
+                $ref: '#/components/schemas/DetailedPatientRecord'
         '404':
           description: Patient not found
     put:
@@ -169,15 +231,32 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Patient'
+              $ref: '#/components/schemas/DetailedPatientRecord'
       responses:
         '200':
           description: Patient updated
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Patient'
+                $ref: '#/components/schemas/DetailedPatientRecord'
         '404':
           description: Patient not found
-#TODO: add delete method
-
+  /chat:
+    post:
+      summary: Return diagnosis
+      operationId: api.get_diagnosis_by_id
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/diagnosis'
+      responses:
+        '200':
+          description: Diagnosis
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/diagnosis'
+        '404':
+          description: Diagnosis not found
